// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionAmount > should render currency amount 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded px-1.5"
          data-testid="AmountLabel__wrapper"
        >
          <div
            class="flex h-full items-center space-x-1"
          >
            <span
              class="whitespace-nowrap text-sm"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100"
    >
      <div>
        <div
          style="height: 20px; width: 20px;"
        >
          <svg
            id="received"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount > should render in lg 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded px-1.5"
          data-testid="AmountLabel__wrapper"
        >
          <div
            class="flex h-full items-center space-x-1"
          >
            <span
              class="whitespace-nowrap text-sm"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100"
    >
      <div>
        <div
          style="height: 20px; width: 20px;"
        >
          <svg
            id="received"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount > should render in md 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded px-1.5"
          data-testid="AmountLabel__wrapper"
        >
          <div
            class="flex h-full items-center space-x-1"
          >
            <span
              class="whitespace-nowrap text-sm"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100"
    >
      <div>
        <div
          style="height: 20px; width: 20px;"
        >
          <svg
            id="received"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount > should render in sm 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionAmount"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Amount
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          <div
            class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded px-1.5"
            data-testid="AmountLabel__wrapper"
          >
            <div
              class="flex h-full items-center space-x-1"
            >
              <span
                class="whitespace-nowrap text-sm"
                data-testid="Amount"
              >
                + 1 DARK
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount > should render in xl 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded px-1.5"
          data-testid="AmountLabel__wrapper"
        >
          <div
            class="flex h-full items-center space-x-1"
          >
            <span
              class="whitespace-nowrap text-sm"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100"
    >
      <div>
        <div
          style="height: 20px; width: 20px;"
        >
          <svg
            id="received"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount > should render in xs 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionAmount"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Amount
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          <div
            class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded px-1.5"
            data-testid="AmountLabel__wrapper"
          >
            <div
              class="flex h-full items-center space-x-1"
            >
              <span
                class="whitespace-nowrap text-sm"
                data-testid="Amount"
              >
                + 1 DARK
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount > should render label for multiple recipients 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded px-1.5"
          data-testid="AmountLabel__wrapper"
        >
          <div
            class="flex h-full items-center space-x-1"
          >
            <span
              class="whitespace-nowrap text-sm"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100"
    >
      <div>
        <div
          style="height: 20px; width: 20px;"
        >
          <svg
            id="received"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount > should render label for multiple recipients 2`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Total Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full items-center justify-center rounded px-1.5"
          data-testid="AmountLabel__wrapper"
        >
          <div
            class="flex h-full items-center space-x-1"
          >
            <span
              class="whitespace-nowrap text-sm"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100"
    >
      <div>
        <div
          style="height: 20px; width: 20px;"
        >
          <svg
            id="received"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
